# rustyness

./: .gitignore  Cargo.toml  Makefile
nes/src/: cart.rs  cpu.rs  lib.rs  ppu.rs  test.rs
src/: ines.rs  main.rs
