[workspace]
resolver = "2"
members = ["nes"]

[package]
name = "rustyness"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.14.1"
glutin = "0.32.1"
glutin-winit = "0.5.0"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
nes = { version = "0.1.0", path = "nes" }
raw-window-handle = "0.6.2"
winit = "0.30.5"

[profile.dev]
overflow-checks = false
